last commit 14 march

--- a/weather/index.html
+++ b/weather/index.html
@@ -18,9 +18,9 @@
         <main>
             <div>
                 <span><input type="text" placeholder="Enter the City Name"><button><i class="fa-regular fa-magnifying-glass-location"></i></button></span>
-                <h2>City name</h2>
-                <h3>Temp</h3>
-                <h3>climate</h3>
+                <h2>City name:</h2>
+                <h3>Temp:</h3>
+                <h3>climate:</h3>
             </div>
         </main>
     <script src="./script.js"></script>
