--- a/ecommerce/ecommerce.html
+++ b/ecommerce/ecommerce.html
@@ -48,6 +48,13 @@
         <div id="dynamic">
            
         </div>
+
+        <div id="footer">
+            <h2>
+                <h2>Grand Total : Rs. <span id="gt">0</span></h2>
+                <button>Make Payment</button>
+            </h2>
+        </div>
     </section>
 
     
